--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,17 +8,17 @@
 </head>
 
 
-<body style="background-image: url('img/bg.png');">
+<body style="background-image: url('./img/bg.png');">
 
 
     <header flex>
-        <h1 inline>Order Food</h1>
+        <h1 inline onclick="goTo('index.html')">Order Food</h1>
 
         <input type="text" placeholder="search">
 
         <div flex paddings>
             <a>Restaurant<br>Zone</a>
-            <a>Customer<br>Zone</a>
+            <a href="./customer/">Customer<br>Zone</a>
         </div>
 
     </header>
@@ -26,7 +26,7 @@
 
     <main>
         <h2>Latest Food items!</h2>
-        <div flex id="latest-food"></div>
+        <div padding flex id="latest-food"></div>
     </main>
 
 
