--- a/frontend/food.html
+++ b/frontend/food.html
@@ -17,7 +17,7 @@
         <input type="text" placeholder="search">
 
         <div flex paddings>
-            <a>Restaurant<br>Zone</a>
+            <a href="./restaurant/">Restaurant<br>Zone</a>
             <a href="./customer/">Customer<br>Zone</a>
         </div>
 
