--- a/frontend/restaurant/index.html
+++ b/frontend/restaurant/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Customer Login - Food Ordering System</title>
     <script src="../script/kawai2.js" defer></script>
-    <script src="../script/login-check.js" defer></script>
+    <script src="./scripts/login-check.js" defer></script>
     <script src="./scripts/dashboard-index.js" defer></script>
     <link rel="stylesheet" href="../styles/kawaii.css">
 </head>
@@ -13,7 +13,8 @@
         <h1 onclick="goTo('../index.html')">Order Food</h1>
         <input type="text" placeholder="search">
         <div flex paddings>
-            <a href="../restaurant/index.html">Restaurant Zone</a>
+            <a href="../customer/">Customer<br>Zone</a>
+            <a href="./add-food.html">Add<br>food</a>
             <button toggleTheme></button>
         </div>
     </header>
@@ -28,6 +29,7 @@
                 <th>Quantity</th>
                 <th>Total</th>
                 <th>Order State</th>
+                <th>Update State</th>
             </tr>
         </table>
     </main>
