--- a/frontend/restaurant/login.html
+++ b/frontend/restaurant/login.html
@@ -2,7 +2,7 @@
 <head>
     <title>Customer Login - Food Ordering System</title>
     <script src="../script/kawai2.js" defer></script>
-    <script src="../script/login-check.js" defer></script>
+    <script src="./scripts/login-check.js" defer></script>
     <script src="./scripts/auth.js" defer></script>
     <link rel="stylesheet" href="../styles/kawaii.css">
 </head>
@@ -12,14 +12,14 @@
         <h1 onclick="goTo('../index.html')">Order Food</h1>
         <input type="text" placeholder="search">     
         <div flex paddings>
-            <a href="../restaurant/index.html">Restaurant Zone</a>
+            <a href="../customer/">Customer<br>Zone</a>
         </div>
     </header>
 
     <main id="login-form">
-            <h2>Customer Login</h2>
-            <input name="email" type="email" placeholder="Enter your email" required>
-            <input name="password" type="password" placeholder="Enter your password" required>
+            <h2>Restaurant Login</h2>
+            <input name="email" type="email" placeholder="Enter email" required>
+            <input name="password" type="password" placeholder="Enter password" required>
             <br>
             <button id="wow" onclick="login()">Login</button>
             <a id="message"></a>
