--- a/frontend/restaurant.html
+++ b/frontend/restaurant.html
@@ -1,16 +1,15 @@
 <html>
 
 <head>
-    <title>Food  Ordering  system</title>
+    <title>Food Ordering system</title>
     <script src="./script/kawai2.js" defer></script>
     <script src="./script/food-list.js" defer></script>
-    <script src="./script/food-latest.js" defer></script>
+    <script src="./script/restaurant-info.js" defer></script>
     <link rel="stylesheet" href="./styles/kawaii.css">
 </head>
 
 
-<body style="background-image: url('./img/bg.png');">
-
+<body style="background-image: url('img/bg.png');">
 
     <header flex>
         <h1 inline onclick="goTo('index.html')">Order Food</h1>
@@ -31,14 +30,21 @@
 
     </header>
 
+    <main paddings>
 
-    <main>
-        <h2>Latest Food items!</h2>
-        <div padding flex id="latest-food"></div>
+        <div paddings>
+            <h2 inline-block id="restaurant_name">...</h2>
+            <div inline-block id="restaurant_address"></div>
+            <div inline-block id="restaurant_email"></div>
+            <p id="restaurant_description"></p>
+            <h2>Foods: </h2>
+            <div padding flex id="restaurant-foods"></div>
+        </div>
+
     </main>
 
-
     <footer>Dveloped By Nahiyan</footer>
-    
+
 </body>
+
 </html>
