--- a/frontend/restaurant/add-food.html
+++ b/frontend/restaurant/add-food.html
@@ -11,13 +11,19 @@
 <body style="background-image: url('../img/bg.png');">
     <header flex>
         <h1 onclick="goTo('../index.html')">Order Food</h1>
-        <input type="text" placeholder="search">
+        <form action="../search.html" method="get" shade1 no-decors round-edge>
+            <input name="q" type="text" placeholder="search" inline center>
+            <div>
+                <button type="submit" name="food">Food</button>|
+                <button type="submit" name="restaurant">Restaurants</button>
+            </div>
+        </form>
         <div flex paddings>
             <a href="../customer/">Customer<br>Zone</a>
         </div>
     </header>
 
-    <main  small id="food-input" paddings large>
+    <main small id="food-input" paddings large>
         <h2>Add food</h2>
         <input name="name" type="text" placeholder="Name of food" required>
         <input name="price" type="number" placeholder="Price in BDT" required>
