phone no and address of customer added to dashboard

--- a/frontend/restaurant/index.html
+++ b/frontend/restaurant/index.html
@@ -34,6 +34,8 @@
                 <th>Rate</th>
                 <th>Quantity</th>
                 <th>Total</th>
+                <th>Address</th>
+                <th>Phone</th>
                 <th>Order State</th>
                 <th>Update State</th>
             </tr>
