--- a/frontend/customer/index.html
+++ b/frontend/customer/index.html
@@ -33,6 +33,8 @@
                 <th>Rate</th>
                 <th>Quantity</th>
                 <th>Total</th>
+                <th>Address</th>
+                <th>Phone</th>
                 <th>Order State</th>
             </tr>
         </table>
