date bug spotted in some devices

--- a/frontend/customer/register.html
+++ b/frontend/customer/register.html
@@ -26,7 +26,8 @@
     <main id="registration-form" paddings large>
         <h2>Customer Registration</h2>
         <input name="name" type="text" placeholder="Enter your name" required>
-        <input name="date_of_birth" placeholder="Date of birth" type="text" onmouseover="(this.type='date')" onmouseout="this.type='text'" onblur="this.type='text'" required>
+        <input name="date_of_birth" placeholder="Date of birth" type="date" required>
+        <!-- <input name="date_of_birth" placeholder="Date of birth" type="text" onmouseover="(this.type='date')" onmouseout="this.type='text'" onblur="this.type='text'" required> -->
         <input name="address" type="text" placeholder="Enter your address" required>
         <input name="phone" type="tel" placeholder="Enter your phone no" required>
         <input name="email" type="email" placeholder="Enter your email" required>
