soft links made instead of hard links

--- a/frontend/customer/register.html
+++ b/frontend/customer/register.html
@@ -3,7 +3,7 @@
 <head>
     <title>Customer Login - Food Ordering System</title>
     <script src="../script/kawai2.js" defer></script>
-    <script src="../script/login-check.js" defer></script>
+    <script src="./scripts/login-check.js" defer></script>
     <script src="./scripts/auth.js" defer></script>
     <link rel="stylesheet" href="../styles/kawaii.css">
 </head>
