acreditted the teammates of friend XD

--- a/frontend/customer/login.html
+++ b/frontend/customer/login.html
@@ -33,6 +33,6 @@
             <a href="./register.html">Register</a>
     </main>
 
-    <footer>Dveloped By Nahiyan</footer>
+    <footer>Dveloped By Group 5</footer>
 </body>
 </html>
