--- a/frontend/food.html
+++ b/frontend/food.html
@@ -52,7 +52,7 @@
         
     </main>
 
-    <footer>Dveloped By Nahiyan</footer>
+    <footer>Dveloped By Group 5</footer>
     
 </body>
 </html>
