--- a/frontend/restaurant/add-food.html
+++ b/frontend/restaurant/add-food.html
@@ -34,7 +34,7 @@
         <br><a id="message"></a>
     </main>
 
-    <footer>Dveloped By Nahiyan</footer>
+    <footer>Dveloped By Group 5</footer>
 </body>
 
 </html>
