--- a/frontend/restaurant/index.html
+++ b/frontend/restaurant/index.html
@@ -42,7 +42,7 @@
         </table>
     </main>
 
-    <footer>Dveloped By Nahiyan <a onclick="logout()">Log out</a></footer>
+    <footer>Dveloped By Group 5 <a onclick="logout()">Log out</a></footer>
 </body>
 
 </html>
