--- a/frontend/customer/index.html
+++ b/frontend/customer/index.html
@@ -40,7 +40,7 @@
         </table>
     </main>
 
-    <footer>Dveloped By Nahiyan <a onclick="logout()">Log out</a></footer>
+    <footer>Dveloped By Group 5 <a onclick="logout()">Log out</a></footer>
 </body>
 
 </html>
