--- a/frontend/customer/register.html
+++ b/frontend/customer/register.html
@@ -38,7 +38,7 @@
         <a href="./login.html">Login</a>
     </main>
 
-    <footer>Dveloped By Nahiyan</footer>
+    <footer>Dveloped By Group 5</footer>
 </body>
 
 </html>
