--- a/frontend/restaurant/register.html
+++ b/frontend/restaurant/register.html
@@ -35,7 +35,7 @@
         <a href="./login.html">Login</a>
     </main>
 
-    <footer>Dveloped By Nahiyan</footer>
+    <footer>Dveloped By Group 5</footer>
 </body>
 
 </html>
