--- a/frontend/search.html
+++ b/frontend/search.html
@@ -13,7 +13,7 @@
 
 
     <header flex>
-        <h1 inline onclick="goTo('index.html')">Order Food</h1>
+        <h1><a flat href="index.html">Order Food</a></h1>
 
         <form action="" method="get" shade1 no-decors round-edge>
             <input name="q" type="text" placeholder="search" inline center>
