--- a/frontend/customer/register.html
+++ b/frontend/customer/register.html
@@ -10,7 +10,7 @@
 
 <body style="background-image: url('../img/bg.png');">
     <header flex>
-        <h1 onclick="goTo('../index.html')">Order Food</h1>
+        <h1><a flat href="../">Order Food</a></h1>
         <form action="../search.html" method="get" shade1 no-decors round-edge>
             <input name="q" type="text" placeholder="search" inline center>
             <div>
