--- a/frontend/restaurant.html
+++ b/frontend/restaurant.html
@@ -12,7 +12,7 @@
 <body style="background-image: url('img/bg.png');">
 
     <header flex>
-        <h1 inline onclick="goTo('index.html')">Order Food</h1>
+        <h1><a flat href="index.html">Order Food</a></h1>
 
         <form action="./search.html" method="get" shade1 no-decors round-edge>
             <input name="q" type="text" placeholder="search" inline center>
