--- a/frontend/restaurant/register.html
+++ b/frontend/restaurant/register.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>Customer Login - Food Ordering System</title>
-    <script src="../script/kawai2.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/styles/kawaii.css">
+    <script src="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/scripts/kawaii2.js" defer></script>
     <script src="./scripts/login-check.js" defer></script>
     <script src="./scripts/auth.js" defer></script>
-    <link rel="stylesheet" href="../styles/kawaii.css">
 </head>
 
 <body style="background-image: url('../img/bg.png');">
@@ -35,7 +36,7 @@
         <a href="./login.html">Login</a>
     </main>
 
-    <footer>Dveloped By Group 5</footer>
+    <footer>Developed By Shad, Jarin, Siam, Maria</footer>
 </body>
 
 </html>
