--- a/frontend/search.html
+++ b/frontend/search.html
@@ -2,10 +2,11 @@
 
 <head>
     <title>Food Ordering system</title>
-    <script src="./script/kawai2.js" defer></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/styles/kawaii.css">
+    <script src="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/scripts/kawaii2.js" defer></script>
     <script src="./script/food-list.js" defer></script>
     <script src="./script/search.js" defer></script>
-    <link rel="stylesheet" href="./styles/kawaii.css">
 </head>
 
 
@@ -40,7 +41,7 @@
     </main>
 
 
-    <footer>Dveloped By Group 5</footer>
+    <footer>Developed By Shad, Jarin, Siam, Maria</footer>
 
 </body>
 
