--- a/frontend/restaurant.html
+++ b/frontend/restaurant.html
@@ -3,8 +3,8 @@
 <head>
     <title>Food Ordering system</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/styles/kawaii.css">
-    <script src="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/scripts/kawaii2.js" defer></script>
+    <link rel="stylesheet" href="./styles/kawaii.css">
+    <script src="./script/kawai2.js" defer></script>
     <script src="./script/food-list.js" defer></script>
     <script src="./script/restaurant-info.js" defer></script>
 </head>
