--- a/frontend/restaurant/add-food.html
+++ b/frontend/restaurant/add-food.html
@@ -3,8 +3,8 @@
 <head>
     <title>Customer Login - Food Ordering System</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/styles/kawaii.css">
-    <script src="https://ashikur-rahman-shad.github.io/kawaii-ui/kawaii-ui/scripts/kawaii2.js" defer></script>
+    <link rel="stylesheet" href="../styles/kawaii.css">
+    <script src="../script/kawai2.js" defer></script>
     <script src="./scripts/login-check.js" defer></script>
     <script src="./scripts/food-input.js" defer></script>
 </head>
